# RTR-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg.json
Headless/: CMakeLists.txt
Headless/assets/shaders/glsl/: basic.frag  basic.vert
Headless/src/: HeadlessApp.cpp
Headless/src/layers/: HeadlessTestLayer.cpp  HeadlessTestLayer.h
RTR/: CMakeLists.txt
RTR/include/RTR/: RTR.h
RTR/include/RTR/Assets/: AssetLoader.h  AssetManager.h  MeshData.h  MeshLoader.h
RTR/include/RTR/Core/: Application.h  Base.h  EntryPoint.h  EventQueue.h  Events.h  Input.h  InputState.h  KeyCodes.h  Layer.h  LayerStack.h  Log.h  MouseCodes.h  Platform.h  SimState.h  TickClock.h  TripleBuffer.h  UUID.h  Window.h  WindowSpec.h
RTR/include/RTR/ImGui/: ImGuiLayer.h
RTR/include/RTR/Renderer/: Buffer.h  GPUMeshCache.h  GraphicsContext.h  RenderCommand.h  Renderer.h  RendererAPI.h  Shader.h  VertexArray.h
RTR/include/RTR/Scene/: Scene.h
RTR/include/RTR/Server/: ServerLayer.h
RTR/src/: RTRPCH.h
RTR/src/Platform/Desktop/: DesktopPlatform.cpp  GLFWWindow.cpp  GLFWWindow.h
RTR/src/Platform/Headless/: HeadlessPlatform.cpp
RTR/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDebug.cpp  OpenGLFramebuffer.cpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h
RTR/src/Platform/Vulkan/: .gitkeep
RTR/src/RTR/Assets/: AssetLoader.cpp  AssetManager.cpp  MeshLoader.cpp  TextureLoader.cpp
RTR/src/RTR/Core/: Application.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  UUID.cpp  Window.cpp
RTR/src/RTR/ImGui/: ImGuiLayer.cpp
RTR/src/RTR/Renderer/: Buffer.cpp  Camera.cpp  Framebuffer.cpp  GPUMeshCache.cpp  Material.cpp  Mesh.cpp  RenderCommand.cpp  Renderer.cpp  Renderer3D.cpp  RendererAPI.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
RTR/src/RTR/Scene/: Entity.cpp  Scene.cpp
RTR/src/RTR/Server/: ServerLayer.cpp
Sandbox/: CMakeLists.txt
Sandbox/assets/models/Brick/: brick.gltf
Sandbox/src/: SandboxApp.cpp  main.cpp
Sandbox/src/layers/: .gitkeep  TestLayer.cpp  TestLayer.h
assets/: .gitignore
assets/models/: .gitkeep
assets/shaders/Vulkan/: .gitkeep
assets/textures/: .gitkeep
